--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li>Tendência</li>
                 <li>Categorias</li>
             </ul>
+            <img src="img/icon-menu.svg" class="menu" alt="">
         </nav>
 
         <main>
