--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="container">
         <nav>
+            <div class="menu">
+                <img src="img/icon-menu.svg" alt="" aria-hidden="true" />
+              </div>
+              <div class="close hide">
+                <img
+                  src="img/icon-menu-close.svg" alt="" aria-hidden="true"/>
+              </div>
             <h1>News Tecnologia</h1>
             <ul class="nav-links">
                 <li>Home</li>
@@ -18,7 +25,6 @@
                 <li>Tendência</li>
                 <li>Categorias</li>
             </ul>
-            <img src="img/icon-menu.svg" class="menu" alt="">
         </nav>
 
         <main>
@@ -97,5 +103,6 @@
     </div>
 </main>
 </div>
+<script src="js/script.js"></script>
 </body>
 </html>
